<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cupcake</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="apple">Apple</string>
    <string name="not_available_for_same_day">(not being available for same day pickup)</string>
    <string name="your_name">What\'s your name?</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="error_name">Please enter a name</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>