<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.cupcakeorderappvm.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_flavorFragment"
            app:destination="@id/flavorFragment" />
    </fragment>
    <fragment
        android:id="@+id/pickUpFragment"
        android:name="com.example.cupcakeorderappvm.PickUpFragment"
        android:label="@string/choose_pickup_date"
        tools:layout="@layout/fragment_pickup" >
        <action
            android:id="@+id/action_pickUpFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.cupcakeorderappvm.SummaryFragment"
        android:label="@string/order_summary"
        tools:layout="@layout/fragment_summary" />
    <fragment
        android:id="@+id/flavorFragment"
        android:name="com.example.cupcakeorderappvm.FlavorFragment"
        android:label="@string/choose_flavor"
        tools:layout="@layout/fragment_flavor" >
        <action
            android:id="@+id/action_flavorFragment_to_pickUpFragment"
            app:destination="@id/pickUpFragment" />
    </fragment>
</navigation>