<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NameFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.cupcakeorderappvm.model.OrderViewModel" />
        <variable
            name="fragmentName"
            type="com.example.cupcakeorderappvm.NameFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/Widget.OrderCupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:layout_marginBottom="4dp"/>
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/cancel_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                     android:onClick="@{() -> fragmentName.cancelOrder()}"/>

                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp"/>

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next"
                    android:onClick="@{() -> fragmentName.goToNextScreen()}"/>

            </LinearLayout>
            
        </LinearLayout>
        
    </ScrollView>

</layout>